# all-reduce-on-smartNIC

./: CMakeLists.txt  config.py  meson.build  meson_options.txt
common/src/: dpdk_utils.c  dpdk_utils.h  dpi_worker.c  dpi_worker.h  gpu_init.c  gpu_init.h  offload_rules.h  telemetry.c  telemetry.h
src/: allreduce.c  allreduce_client.c  allreduce_client.h  allreduce_core.c  allreduce_core.h  allreduce_daemon.c  allreduce_daemon.h  allreduce_ucx.c  allreduce_ucx.h  meson.build
