#
# Copyright (c) 2021-2022 NVIDIA CORPORATION & AFFILIATES, ALL RIGHTS RESERVED.
#
# This software product is a proprietary product of NVIDIA CORPORATION &
# AFFILIATES (the "Company") and all right, title, and interest in and to the
# software product, including all associated intellectual property rights, are
# and shall remain exclusively with the Company.
#
# This software product is governed by the End User License Agreement
# provided with the software product.
#

option('enable_all_applications', type: 'boolean', value: false,
	description: 'Enable all DOCA applications.')

option('enable_grpc_support', type: 'boolean', value: false,
	description: 'Enable all gRPC based DOCA applications.')

option('enable_gpu_support', type: 'boolean', value: false,
	description: 'Enable all GPU based DOCA applications.')

option('enable_cross_compilation_to_dpu', type: 'boolean', value: false,
	description: 'Enable cross-compilation mode from host to DPU.')

option('enable_ucx_support', type: 'boolean', value: true,
	description: 'Activate the UCX support across *ALL* DOCA.')

# Enables per application - turned off by default
option('enable_allreduce', type: 'boolean', value: true,
	description: 'Enable Allreduce application.')
option('enable_app_shield_agent', type: 'boolean', value: false,
	description: 'Enable the App Shield Agent application.')
option('enable_application_recognition', type: 'boolean', value: false,
	description: 'Enable the Application Recognition application.')
option('enable_dns_filter', type: 'boolean', value: false,
	description: 'Enable the DNS filter application.')
option('enable_file_scan', type: 'boolean', value: false,
	description: 'Enable the File Scan application.')
option('enable_firewall', type: 'boolean', value: false,
	description: 'Enable Firewall application.')
option('enable_ips', type: 'boolean', value: false,
	description: 'Enable IPS application.')
option('enable_secure_channel', type: 'boolean', value: false,
	description: 'Enable Secure Channel application.')
option('enable_simple_fwd_vnf', type: 'boolean', value: false,
	description: 'Enable Simple Forward VNF application.')
option('enable_url_filter', type: 'boolean', value: false,
	description: 'Enable URL Filter application.')
